<resources>
    <string name="app_name">Senyum Puan</string>
    <string name="btn_sign_in">Masuk</string>
    <string name="register">Daftar</string>
    <string name="desa_binaan">Desa Binaan</string>

    <!--    FORM RESOURCE -->
    <string name="edt_email">Email</string>

    <string name="no_account">Belum punya akun?</string>
    <string name="edt_password">Password</string>
    <string name="tv_nama">Nama</string>
    <string name="enter_name">Masukkan nama</string>
    <string name="enter_password">Masukkan password</string>
    <string name="enter_email">Masukkan Email</string>
    <string name="tv_email">Email</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_address">Alamat</string>
    <string name="enter_address">Masukkan alamat</string>
    <string name="enter_gender">Masukkan gender</string>
    <string name="tv_number_phone">Nomor Hp</string>
    <string name="tv_password">Password</string>
    <string name="tv_age">Umur</string>
    <string name="success_regiter">Akun telah berhasil di daftarkan!</string>
    <string-array name="list_gender">
        <item>Perempuan</item>
        <item>Laki-laki</item>
    </string-array>

    <!--    ERROR MESSAGE -->
    <string name="empty_name">Nama tidak boleh kosong</string>
    <string name="empty_email">Email tidak boleh kosong</string>
    <string name="empty_gender">Gender tidak boleh kosong</string>
    <string name="empty_hp">Nomor Hp tidak boleh kosong</string>
    <string name="empty_address">Alamat tidak boleh kosong</string>
    <string name="empty_age">Umur tidak boleh kosong</string>
    <string name="empty_password">Password tidak boleh kosong</string>
    <string name="password_must_six_digit">Password tidak boleh kurang dari 6 digit</string>


    <string name="summary">Komunitas Senyum Puan kini hadir di tengah masyarakat Indonesia, khususnya NTB. Menyoroti isu perempuan, komunitas ini memiliki 3 fokus utama, yaitu pemberdayaan perempuan, penghubung penyintas dengan profesional, dan edukasi masyarakat.</string>
    <string name="dashboard">Dashboard</string>
    <string name="more_detail">Selengkapnya >></string>
    <string name="tv_menu">Menu</string>
    <string name="menu1">Ruang Aman</string>
    <string name="menu2">Desa Binaan</string>
    <string name="desc_menu1">Konsultasikan masalahmu dengan kami</string>
    <string name="desc_menu2">Lihat daftar desa yang pernah kami kunjungi</string>
    <string name="sign_out">Keluar</string>
    <string name="alert_message">Apakah kamu yakin ingin keluar?</string>
    <!--    ROLE -->
    <string name="role_admin">admin</string>
    <string name="role_user">user</string>

    <!--    Social Media-->
    <string name="instagram">https://www.instagram.com/senyumpuan/</string>

    <string name="title_admin">Admin</string>
    <string name="enter_message">Tulis pesan</string>
    <string name="speech_to_text_desc">Katakan pesan yang ingin anda tuliskan</string>
    <string name="desc_add_desa_binaan">Tambahkan desa binaan</string>
    <string name="ruang_aman">Ruang Aman</string>

<!--    Admin-->
    <string name="add_village_title">Tambah Desa Binaan</string>
    <string name="add_latitude">Latitude</string>
    <string name="add_longitude">Longitude</string>
    <string name="add_about_village">Tentang Desa</string>
    <string name="btn_add_village">Tambah</string>
    <string name="empty_village_name">Nama Desa tidak boleh kosong</string>
    <string name="empty_latitude">Latitude tidak boleh kosong</string>
    <string name="empty_longitude">Longitude tidak boleh kosong</string>
    <string name="empty_desc_village">Deskripsi tentang desa tidak boleh kosong</string>
    <string name="desc_village_image">Foto Desa</string>
    <string name="village_image">foto desa</string>
    <string name="documentation_pictures">Dokumentasi Foto</string>
    <string name="failed_add_desa">Maaf terjadi kesalahan saat mengupload data</string>
    <string name="success_add_desa">Desa telah berhasil di tambahkan</string>
    <string name="empty_documentation">Dokumentasi foto tidak boleh kosong</string>
</resources>